# tuyad

./: .gitignore  CMakeLists.txt  README.md  main.c  makefile  test.sh  tuya.c  tuya.h
.cache/clangd/index/: arguments.c.537979B28D31021F.idx  arguments.h.7C8601F1BCF3A2C1.idx  log_level.h.5CF56A4E9A8941C4.idx  main.c.4787A3138626EF43.idx  tuya.c.9F2CD70A57CB093A.idx  tuya.h.826657A0383A45F5.idx  tuya_action_esp.c.3C5B755668316E5F.idx  tuya_action_esp.h.C132B0EFAF210635.idx  tuya_action_log.c.C31077573938C526.idx  tuya_action_log.h.1900FBF1285E6601.idx  tuya_action_system.c.D84F5B0572F94C34.idx  ubus.c.44AB1C7DC133E9F7.idx  ubus.h.1866928C43A0F5EA.idx  ubus_parsing.c.6B2AD7EABF0E9020.idx  ubus_parsing.h.41FD3CF15F106511.idx
includetmp/: tuya_cacert.h
lib/tuya-iot-core-sdk/: CMakeLists.txt
src/: arguments.c  arguments.h  esp.c  esp.h  log_level.h  main.c  tuya.c  tuya.h  tuya_action.h  tuya_action_esp.c  tuya_action_esp.h  tuya_action_log.c  tuya_action_log.h  tuya_action_system.c  tuya_action_system.h  ubus.c  ubus.h  ubus_action_esp.c  ubus_action_esp.h  ubus_action_system.c  ubus_action_system.h  ubus_methods.c  ubus_methods.h  ubus_parsing.c  ubus_parsing.h
src/tuya/: tuya.c  tuya_action_esp.c  tuya_action_log.c  tuya_action_log.h  tuya_action_system.c  tuya_error.c  tuya_error.h
src/ubus/: ubus.c  ubus_action_esp.c  ubus_action_system.c  ubus_action_system.h  ubus_parsing.c  ubus_parsing.h
